state를 통한 버튼 카운터 만들기
useState를 통해 컴포넌트 내부의 상태값을 변경할 수 있다.

--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,35 @@
   position: relative;
   margin: auto;
 }
+
+.counter {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  align-items: center;
+  border: 2px solid gold;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.counter:hover {
+  background-color: gold;
+}
+.number {
+  display: block;
+}
+.number {
+  font-size: 7rem;
+}
+.button {
+  font-size: 2rem;
+  padding: 0.2rem 1rem;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  background-color: green;
+}
