카운터 상태 끌어올리기 (totalCounter 만들기)
상위 컴포넌트 내부에 속한 하위 컴포넌트에 상위 컴포넌트에서 만든 onClick이벤트를 props로 전달한다.
그리고 그 전달받은 onClick 함수를 하위 컴포넌트 내부의 onClick 이벤트 안에서 호출 시키면 하위컴포넌트의 onClcik 이벤트가 발생할 때마다 상위컴포넌트의 onClick함수가 호출되어 상위 컴포넌트의 state를 변화하는 onClick 이벤트가 발생한다.

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
 .container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .counter:hover {
@@ -66,4 +67,17 @@
   cursor: pointer;
   border-radius: 0.5rem;
   background-color: green;
+}
+
+.banner {
+  border: 2px solid black;
+  text-align: center;
+  margin: 2rem 2rem 0rem 2rem;
+  padding: 1rem;
+  background-color: gold;
+}
+
+.total {
+  font-size: 1rem;
+  margin-left: 0.1rem;
 }
